margin added and fix the gap

--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -5,6 +5,7 @@
   width: 100%;
   margin-top: 1rem !important;
   padding: 0 4rem !important; 
+  margin-bottom: 1rem !important;
 }
 
 @media (min-width:1921px) and (max-width: 2560px){
